shijin4: Fix dark mode to be a bit more refined

--- a/themes/shijin4/static/css/shijin4.css
+++ b/themes/shijin4/static/css/shijin4.css
@@ -513,7 +513,7 @@ ul.pagination {
 	border-color: #c7c7c7;
 	border-style: solid;
 	border-width: 1px;
-	padding: 0px 2px 0px 2px;
+	padding: 3px 2px 0px 2px;
 	background-color: #e8e8e8;
 	font-family: serif;
 	font-variant: small-caps;
@@ -529,6 +529,8 @@ ul.pagination {
 	background-color: #e8e8e8;
 	font-size: 0.9em;
 	font-family: monospace;
+	padding: 2px;
+	border-radius: 3px;
 }
 
 figure {	/* Use for step-by-step guides consisting mainly of */
@@ -649,8 +651,8 @@ footer a, footer span.glyphicon {
 	.panel-default {
 	}
 	#main-front {
-		color: #AAA;
-		background-color: #000;
+		color: #CCC;
+		background-color: #121212;
 	}
 	#main-front a {
 		color: #DDDFFF;
@@ -660,10 +662,44 @@ footer a, footer span.glyphicon {
 		background-color: #333;
 	}
 	div.node h2 {
-		color: #CCC;
+		color: #DDD;
+	}
+	div.node table {
+	        width: 100%;
+	        border: 1px solid #888;
+	        margin: 20px 0px 20px 0px;
+	}
+	div.node table th {
+	        padding: 2px;
+	        background-color: #ddd;
+	}
+	div.node table td {
+	        padding: 2px;
+	        border-bottom: 1px dashed #ddd;
+	}
+	div.alert-danger {
+	        background: #4d0000 url(/images/Alert_Stop_32.png) 15px 15px no-repeat;
+	        padding-left: 60px;
+		color: #EEE;
+	}
+	div.alert-warning {
+	        background: #453b07 url(/images/Alert_Warning_32.png) 15px 15px no-repeat;
+	        padding-left: 60px;
+		color: #EEE;
+	}
+	div.alert-info {
+	        background: #0d2f3f url(/images/Alert_Info_32.png) 15px 15px no-repeat;
+	        padding-left: 60px;
+		color: #EEE;
+	}
+	div.alert a {
+	        text-decoration: underline;
+	}
+	.alert-info {
+		border-color: #aaa;
 	}
 	h1, h1.title, h2.title, h2.title a, h3 {
-		color: #CCC !important;
+		color: #EEE !important;
 	}
 	footer {
 		background: linear-gradient(to bottom, #333 0%,#222 100%);
@@ -674,5 +710,55 @@ footer a, footer span.glyphicon {
 		background-color: #333;
 		color: #AAA;
 		border: 1px solid #444;
+	}
+	.app {                          /* GUI application name */
+	        font-size: 1.0em;
+	        font-family: serif;
+	        font-style: italic;
+	        color: #d06262;
+	}
+	.button {                       /* Button */
+	        border: 1px solid #c7c7c7;
+	        border-bottom: 1px solid #aaa;
+	        border-right: 1px solid #aaa;
+	        border-radius: 3px;
+	        padding: 1px 15px 1px 15px;
+	        background-color: #e8e8e8;
+	        font-size: 0.9em;
+	        margin: 0 3px 0 3px;
+	}
+	.cli {                          /* Shell command or file */
+		background-color: #000;
+		font-size: 0.8em;
+		font-family: monospace;
+		border: 1px solid green;
+		padding: 4px 5px 0px 5px;
+	}
+	.key {                          /* Shortcut (separate with &nbsp; */
+	        -webkit-border-radius: 3px;
+	        -khtml-border-radius: 3px;
+	        -moz-border-radius: 3px;
+	        border-radius: 3px;
+	        border-color: #eee;
+	        border-style: solid;
+	        border-width: 1px;
+	        padding: 3px 2px 0px 2px;
+	        background-color: #444;
+	        font-family: serif;
+	        font-variant: small-caps;
+	        font-size: 0.8em;
+	}
+	.menu {                         /* Menu */
+	        font-size: 1.0em;
+	        font-family: serif;
+	        font-style: italic;
+	        color: #7f7cd0;
+	}
+	.path {                         /* File path */
+	        background-color: #444;
+	        font-size: 0.9em;
+	        font-family: monospace;
+		padding: 2px;
+		border-radius: 3px;
 	}
 }
